kubernetes-prctice2/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  #type: NodePort
  selector:
    app: python-app
  ports:
    - port: 8000
      targetPort: 8000
      #nodePort: 30000
