kubernetes-prctice2/tls_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
    - secretName: ingress-demo-com-tls
      hosts:
        - "ingress-demo.com"
  rules:
    - host: ingress-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
